Created project structure for webapp

--- a/patient-otp-service/src/main/resources/application.properties
+++ b/patient-otp-service/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.application.name=Spring Boot OTP Enabled App
 
+spring
+ h2
+   console 
+     enabled = true
 
 
 #smtp mail properties
