implemented rabbit mq producer code

--- a/user-management-service/src/main/resources/application.properties
+++ b/user-management-service/src/main/resources/application.properties
@@ -1,12 +1,20 @@
-server.port = 8081
-
+server.port=8081
 spring.data.mongodb.database=UsersRegistry
-spring.data.mongodb.host = localhost
-spring.data.mongodb.port = 27017
-spring.data.mongodb/uri = mongodb
-spring.datasource.driver-class-name = mongodb.jdbcMongoDriver
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb/uri=mongodb
+spring.datasource.driver-class-name=mongodb.jdbcMongoDriver
+data.exception.message1="This User is already registered"
 
-data.exception.message1 = "This User is already registered"
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.password=guest
+spring.rabbitmq.port=15672
+spring.rabbitmq.username=guest
+spring.rabbitmq.exchange=user.exchange
+spring.rabbitmq.queue=user.queue
+spring.rabbitmq.routingkey=user.routingkey
+
 
 
 
