--- a/patient-otp-service/src/main/resources/application.properties
+++ b/patient-otp-service/src/main/resources/application.properties
@@ -5,16 +5,11 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.application.name=Spring Boot OTP Enabled App
 
-spring
- h2
-   console 
-     enabled = true
+spring.h2.console.enabled = true
 
-
-#smtp mail properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=rajesh13579kumar@gmail.com
-spring.mail.password= greenDAY4
+spring.mail.username=spring1234mail@gmail.com
+spring.mail.password=qbryrjlmhtjetwxx
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
