--- a/user-authentication-service/pom.xml
+++ b/user-authentication-service/pom.xml
@@ -42,6 +42,11 @@
             <version>0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+            <!--<version>2.5.4</version>-->
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <!--<dependency>
