implemented rabbit mq producer code, introduced NullValueException

--- a/user-management-service/src/main/resources/application.properties
+++ b/user-management-service/src/main/resources/application.properties
@@ -1,21 +1,23 @@
 server.port=8081
-spring.data.mongodb.database=UsersRegistry
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb/uri=mongodb
-spring.datasource.driver-class-name=mongodb.jdbcMongoDriver
-data.exception.message1="This User is already registered"
-
-
+#spring.data.mongodb.database=UsersRegistry
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.uri=mongodb
+#spring.datasource.driver-class-name=mongodb.jdbc.MongoDriver
+spring.application.name=user-management-service
+spring.data.mongodb.uri=mongodb://localhost:27017/UsersRegistry
+data.exception.message1="This User is already registered."
+data.exception.message2="Please make sure you have filled in all the details."
+data.controller.doctorTag="Doctor"
+data.controller.volunteerTag="Volunteer"
+data.controller.userGotSaved="You have been successfully registered! Kindly Login now."
 spring.rabbitmq.host=localhost
 spring.rabbitmq.password=guest
 spring.rabbitmq.port=15672
 spring.rabbitmq.username=guest
 spring.rabbitmq.exchange=user.exchange
 spring.rabbitmq.queue=user.queue
-spring.rabbitmq.routingkey=user.routingkey
-
-
+spring.rabbitmq.routingKey=user.routingKey
 
 
 
