--- a/patient-otp-service/src/main/resources/application.properties
+++ b/patient-otp-service/src/main/resources/application.properties
@@ -11,6 +11,9 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+spring.jpa.show-sql=true
+server.port=9999
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=spring1234mail@gmail.com
