--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,40 @@
 version: "3"
 services:
-  eureka-server:
-    build: eureka-server/
-    container_name: eureka-server
+#  eureka-server:
+#    build: eureka-server/
+#    container_name: eureka-server
+#    restart: always
+#    network_mode: "host"
+#    hostname: localhost
+#    ports:
+#      - 8076:8076
+#  api-gateway:
+#    build: api-gateway/
+#    container_name: api-gateway
+#    depends_on:
+#      - eureka-server
+#    restart: always
+#    network_mode: "host"
+#    hostname: localhost
+#    ports:
+#      - 8086:8086
+#  product-webapp:
+#    build: product-webapp/
+#    image: product-webapp
+#    depends_on:
+#      - eureka-server
+#      - api-gateway
+#    restart: always
+#    container_name: product-webapp
+#    network_mode: "host"
+#    hostname: localhost
+#    ports:
+#      - "8099:8099"
+  information-service:
+    build: information-service/
+    container_name: information-service
     restart: always
     network_mode: "host"
     hostname: localhost
     ports:
-      - 8076:8076
-  api-gateway:
-    build: api-gateway/
-    container_name: api-gateway
-    depends_on:
-      - eureka-server
-    restart: always
-    network_mode: "host"
-    hostname: localhost
-    ports:
-      - 8086:8086
-  product-webapp:
-    build: product-webapp/
-    image: product-webapp
-    depends_on:
-      - eureka-server
-      - api-gateway
-    restart: always
-    container_name: product-webapp
-    network_mode: "host"
-    hostname: localhost
-    ports:
-      - "8099:8099"
+      - 1234:1234
