--- a/user-management-service/src/main/resources/application.properties
+++ b/user-management-service/src/main/resources/application.properties
@@ -10,14 +10,14 @@ data.exception.message1="This User is already registered."
 data.exception.message2="Please make sure you have filled in all the details."
 data.controller.doctorTag="Doctor"
 data.controller.volunteerTag="Volunteer"
-data.controller.userGotSaved="You have been successfully registered! Kindly Login now."
+data.controller.userGotSaved="You have been successfully registered! Kindly Sign In now."
 spring.rabbitmq.host=localhost
 spring.rabbitmq.password=guest
 spring.rabbitmq.port=15672
 spring.rabbitmq.username=guest
 spring.rabbitmq.exchange=user.exchange
 spring.rabbitmq.queue=user.queue
-spring.rabbitmq.routingKey=user.routingKey
+spring.rabbitmq.routingkey=user.routingkey
 
 
 
