--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,11 +30,11 @@ services:
 #    hostname: localhost
 #    ports:
 #      - "8099:8099"
-  information-service:
-    build: information-service/
-    container_name: information-service
+  patient-otp-service:
+    build: patient-otp-service/
+    container_name: patient-otp-service
     restart: always
     network_mode: "host"
     hostname: localhost
     ports:
-      - 1234:1234
+      - 9999:9999
