--- a/resource-request-service/pom.xml
+++ b/resource-request-service/pom.xml
@@ -66,6 +66,10 @@
       <groupId>jakarta.persistence</groupId>
       <artifactId>jakarta.persistence-api</artifactId>
     </dependency>
+      <dependency>
+          <groupId>io.micrometer</groupId>
+          <artifactId>micrometer-core</artifactId>
+      </dependency>
   </dependencies>
 
   <build>
