--- a/resource-request-service/src/main/resources/application.properties
+++ b/resource-request-service/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.data.mongodb.host = localhost
 spring.data.mongodb.port = 27017
 spring.data.mongodb/uri = mongodb
 spring.datasource.driver-class-name = mongodb.jdbcMongoDriver
+data.exception.message="Please make sure you have filled in all the details."
