used angular material for the registration page UI

--- a/user-management-service/src/main/resources/application.properties
+++ b/user-management-service/src/main/resources/application.properties
@@ -6,11 +6,11 @@ server.port=8081
 #spring.datasource.driver-class-name=mongodb.jdbc.MongoDriver
 spring.application.name=user-management-service
 spring.data.mongodb.uri=mongodb://localhost:27017/UsersRegistry
-data.exception.message1="This User is already registered."
-data.exception.message2="Please make sure you have filled in all the details."
+data.exception.message1="This User is already registered"
+data.exception.message2="Please make sure you have filled in all the details"
 data.controller.doctorTag="Doctor"
 data.controller.volunteerTag="Volunteer"
-data.controller.userGotSaved="You have been successfully registered! Kindly Sign In now."
+data.controller.userGotSaved="You have been successfully registered! Kindly Sign In now"
 spring.rabbitmq.host=localhost
 spring.rabbitmq.password=guest
 spring.rabbitmq.port=15672
