--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,4 +1,7 @@
 FROM openjdk:11
-ADD ./target/api-gateway-0.0.1-SNAPSHOT.jar /usr/src/api-gateway-0.0.1-SNAPSHOT.jar
-WORKDIR usr/src
-ENTRYPOINT ["java","-jar", "api-gateway-0.0.1-SNAPSHOT.jar"]
+
+EXPOSE 8086
+
+ADD ./target/api-gateway-0.0.1-SNAPSHOT.jar /api-gateway-0.0.1-SNAPSHOT.jar
+
+ENTRYPOINT ["java","-jar", "/api-gateway-0.0.1-SNAPSHOT.jar"]
