--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,16 +8,14 @@ services:
 #    hostname: localhost
 #    ports:
 #      - 8076:8076
-#  api-gateway:
-#    build: api-gateway/
-#    container_name: api-gateway
-#    depends_on:
-#      - eureka-server
-#    restart: always
-#    network_mode: "host"
-#    hostname: localhost
-#    ports:
-#      - 8086:8086
+  api-gateway:
+    build: api-gateway/
+    container_name: api-gateway
+    restart: always
+    network_mode: "host"
+    hostname: localhost
+    ports:
+      - 8086:8086
 #  product-webapp:
 #    build: product-webapp/
 #    image: product-webapp
