--- a/patient-otp-service/src/main/resources/application.properties
+++ b/patient-otp-service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #Properties for thymleaf template
-spring.thymeleaf.cache=false
-spring.thymeleaf.enabled=true
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-spring.application.name=Spring Boot OTP Enabled App
+#spring.thymeleaf.cache=false
+#spring.thymeleaf.enabled=true
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
+#spring.application.name=Spring Boot OTP Enabled App
 
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:UserDB
