--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,3 +38,47 @@ services:
     hostname: localhost
     ports:
       - 9999:9999
+  resource-request-service:
+    build: resource-request-service/
+    container_name: resource-request-service
+    restart: always
+    network_mode: "host"
+    hostname: localhost
+    ports:
+      - 9901:9901
+
+  information-service:
+    build: information-service/
+    container_name: information-service
+    restart: always
+    network_mode: "host"
+    hostname: localhost
+    ports:
+      - 1234:1234
+
+  user-management-service:
+    build: user-management-service/
+    container_name: user-management-service
+    restart: always
+    network_mode: "host"
+    hostname: localhost
+    ports:
+      - 8081:8081
+
+  user-authentication-service:
+    build: user-authentication-service/
+    container_name: user-authentication-service
+    restart: always
+    network_mode: "host"
+    hostname: localhost
+    ports:
+      - 9099:9099
+
+  doctor-consultation-service:
+    build: doctor-consultation-service/
+    container_name: doctor-consultation-service
+    restart: always
+    network_mode: "host"
+    hostname: localhost
+    ports:
+      - 8082:8082
