header scroll fixed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,3 +38,12 @@ services:
     hostname: localhost
     ports:
       - 9999:9999
+
+  user-management-service:
+    build: user-management-service/
+    container_name: user-management-service
+    restart: always
+    network_mode: "host"
+    hostname: localhost
+    ports:
+      - 8081:8081
