--- a/resource-request-service/src/main/resources/application.properties
+++ b/resource-request-service/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 server.port = 9901
+spring.servlet.multipart.max-file-size=128KB
+spring.servlet.multipart.max-request-size=128KB
+spring.http.multipart.enabled=false
 spring.data.mongodb.database = resourceDB
 spring.data.mongodb.host = localhost
 spring.data.mongodb.port = 27017
