--- a/product-webapp/webapp/package.json
+++ b/product-webapp/webapp/package.json
@@ -15,7 +15,7 @@
     "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.1.2",
     "@angular/compiler": "~11.1.2",
-    "@angular/core": "~11.1.2",
+    "@angular/core": "^11.1.2",
     "@angular/flex-layout": "^12.0.0-beta.35",
     "@angular/forms": "~11.1.2",
     "@angular/material": "^11.2.13",
