--- a/product-webapp/webapp/package.json
+++ b/product-webapp/webapp/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
     "angular": "^1.8.2",
+    "aws-sdk": "^2.997.0",
     "bootstrap": "^5.1.1",
     "material": "^0.4.3",
     "ngx-webstorage-service": "^4.1.0",
