--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,14 +74,14 @@ services:
     ports:
       - 9099:9099
 
-  doctor-consultation-service:
-    build: doctor-consultation-service/
-    container_name: doctor-consultation-service
-    restart: always
-    network_mode: "host"
-    hostname: localhost
-    ports:
-      - 8082:8082
+#  doctor-consultation-service:
+#    build: doctor-consultation-service/
+#    container_name: doctor-consultation-service
+#    restart: always
+#    network_mode: "host"
+#    hostname: localhost
+#    ports:
+#      - 8082:8082
 
   mongodb-user:
     image: mongo:latest
@@ -89,8 +89,6 @@ services:
     hostname: localhost
     ports:
       - 27017:27017
-    volumes:
-      - /db/mongo:/data/db
 
   rabbitmq:
     image: rabbitmq:3-management
@@ -108,7 +106,4 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=userDB
-      - MYSQL_USER=root
-      - MYSQL_PASSWORD=root
-    volumes:
-      - ./my-db2:/var/lib/mysql
+
