--- a/product-webapp/webapp/package.json
+++ b/product-webapp/webapp/package.json
@@ -26,6 +26,7 @@
     "aws-sdk": "^2.997.0",
     "bootstrap": "^5.1.1",
     "material": "^0.4.3",
+    "ngx-material-file-input": "^2.1.1",
     "ngx-webstorage-service": "^4.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
