--- a/product-webapp/webapp/package.json
+++ b/product-webapp/webapp/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
     "angular": "^1.8.2",
+    "angular-vertical-tabs": "github:SamuelMarks/angular-vertical-material-tabs",
     "aws-sdk": "^2.997.0",
     "bootstrap": "^5.1.1",
     "material": "^0.4.3",
