--- a/user-authentication-service/src/main/resources/application.yml
+++ b/user-authentication-service/src/main/resources/application.yml
@@ -4,6 +4,8 @@ server:
 jwt:
   secret: secret
 spring:
+  application:
+    name: USER-AUTHENTICATION-SERVICE
   datasource:
     #    driverClassName: com.mysql.jdbc.Driver
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -39,3 +41,12 @@ app:
   service:
     message1: User Already Exists
     message2: Invalid Id and Password
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    serviceUrl:
+      defaultZone: http://localhost:8076/eureka/
+  instance:
+    hostname: localhost
