--- a/doctor-consultation-service/pom.xml
+++ b/doctor-consultation-service/pom.xml
@@ -72,6 +72,7 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
       <version>3.0.4</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
