close sos request

--- a/patient-otp-service/src/main/resources/application.properties
+++ b/patient-otp-service/src/main/resources/application.properties
@@ -20,3 +20,11 @@ spring.mail.username=spring1234mail@gmail.com
 spring.mail.password=qbryrjlmhtjetwxx
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.password=guest
+spring.rabbitmq.port=15672
+spring.rabbitmq.username=guest
+spring.rabbitmq.exchange=mail.exchange
+spring.rabbitmq.queue=mail.queue
+spring.rabbitmq.routingkey=mail.routingkey
