--- a/resource-request-service/src/main/resources/application.properties
+++ b/resource-request-service/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.data.mongodb.port = 27017
 spring.data.mongodb/uri = mongodb
 spring.datasource.driver-class-name = mongodb.jdbcMongoDriver
 data.exception.message="Please make sure you have filled in all the details."
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.password=guest
+spring.rabbitmq.port=15672
+spring.rabbitmq.username=guest
+spring.rabbitmq.exchange=mail.exchange
+spring.rabbitmq.queue=mail.queue
+spring.rabbitmq.routingkey=mail.routingkey
