volunteer revert service

--- a/resource-request-service/src/main/resources/application.properties
+++ b/resource-request-service/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.exchange=mail.exchange
 spring.rabbitmq.queue=mail.queue
 spring.rabbitmq.routingkey=mail.routingkey
+spring.rabbitmq.exchange1=volunteer.exchange
+spring.rabbitmq.queue1=volunteer.queue
+spring.rabbitmq.routingkey1=volunteer.routingkey
