--- a/volunteer-revert-service/src/main/resources/application.properties
+++ b/volunteer-revert-service/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 server.port=8686
 spring.data.mongodb.uri=mongodb://localhost:27017/VolunteerReverts
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.password=guest
+spring.rabbitmq.port=15672
+spring.rabbitmq.username=guest
+spring.rabbitmq.exchange=volunteer.exchange
+spring.rabbitmq.queue=volunteer.queue
+spring.rabbitmq.routingkey=volunteer.routingkey
