--- a/volunteer-revert-service/pom.xml
+++ b/volunteer-revert-service/pom.xml
@@ -54,6 +54,12 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
             <version>3.0.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+            <!--<version>2.5.4</version>-->
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
