--- a/patient-otp-service/src/main/resources/application.properties
+++ b/patient-otp-service/src/main/resources/application.properties
@@ -16,8 +16,8 @@ server.port=9999
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=spring1234mail@gmail.com
-spring.mail.password=qbryrjlmhtjetwxx
+spring.mail.username=kawachstackroute@gmail.com
+spring.mail.password=xdablytyzmuxckxl
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
