--- a/volunteer-revert-service/src/main/resources/application.properties
+++ b/volunteer-revert-service/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.exchange=volunteer.exchange
 spring.rabbitmq.queue=volunteer.queue
 spring.rabbitmq.routingkey=volunteer.routingkey
+data.controller.successMessage = "Volunteer details have been updated"
