chat-service done as per coding standerd

--- a/chat-service/src/main/resources/application.properties
+++ b/chat-service/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.data.mongodb/uri = mongodb
 spring.datasource.driver-class-name = mongodb.jdbcMongoDriver
 #spring.data.mongodb.uri=mongodb://localhost:27017/mongodb
 server.port=8095
+
+data.exception.message="Please make sure you have filled in all the details."
