Updated codes according to coding standards

--- a/doctor-consultation-service/src/main/resources/application.properties
+++ b/doctor-consultation-service/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.rabbitmq.exchange=doctor.exchange
 spring.rabbitmq.queue=doctor.queue
 spring.rabbitmq.routingkey=doctor.routingkey
 #spring.main.allow-bean-definition-overriding=true
+data.exception.message1="Doctor already present with same Email-Id"
+data.exception.message2="Can't find any doctors with this Email-Id"
+data.exception.message3="Error getting Doctors from database"
+
