--- a/patient-otp-service/src/main/resources/application.properties
+++ b/patient-otp-service/src/main/resources/application.properties
@@ -28,3 +28,11 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.exchange=mail.exchange
 spring.rabbitmq.queue=mail.queue
 spring.rabbitmq.routingkey=mail.routingkey
+
+data.exception.message1="Please enter the email-Id."
+data.exception.message2="Please enter the OTP sent to the email-Id."
+data.exception.message3="Problems with sending email."
+data.exception.message4="Problems with generating OTP."
+
+
+
